# hangman

./: .gitignore  flake.nix  hangman.cabal  hello.cabal  result
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
nix/: hix.nix
src/: Main.hs  result
