-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hangman
version: 1.0.0.2
license: BSD3
license-file: LICENSE
copyright: (c) Oliverpauffley
author: Oliverpauffley
maintainer: Oliverpauffley <oliverpauffley@gmail.com>
stability: stable
category: Console, Text
cabal-version: >= 1.6
build-type: Simple
extra-source-files: data/dict.txt

executable hangman
  hs-source-dirs: src
  main-is: main.hs
  build-depends: base >= 4.7 && < 5
                 , random
                 , split
